remove region from frontend

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <span class="form flex flex-column flex-center">
             <input type="text" v-model="email" name="email" placeholder="your.email@ewelink.com">
             <input type="password" v-model="password" name="password" placeholder="y0urP455w0rd">
-            <input type="text" v-model="region" name="region" placeholder="us">
+            <!-- <input type="text" v-model="region" name="region" placeholder="us"> -->
           </span>
 
           <p class="disclaimer">This is not an official product from eWelink. No data are storage, you can check the code to make sure about it.</p>
